<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_dravite">About Dravite</string>
    <string name="about_dravite_desc">Info about our company</string>
    <string name="about_dravite_url">https://plus.google.com/u/1/110012657077509869872</string>
    <string name="accordion">Accordion</string>
    <string name="action_add">Add to…</string>
    <string name="action_hide">Hide</string>
    <string name="action_move">Move to…</string>
    <string name="action_panel_transparency">ActionPanel opacity</string>
    <string name="action_remove">Remove from this folder</string>
    <string name="activate_quick_access">Activate Quick Access apps</string>
    <string name="activity_add_apps_to_folder">Add Apps</string>
    <string name="activity_add_backup">Add a Backup</string>
    <string name="activity_add_qa">Add QuickApp</string>
    <string name="activity_app_editor">Edit App</string>
    <string name="activity_app_editor_icon_packs">Select an Icon Pack</string>
    <string name="activity_app_editor_icons">Select an Icon</string>
    <string name="activity_backup_restore">Backup and restore</string>
    <string name="activity_folder_editor_edit">Edit Folder</string>
    <string name="activity_folder_editor_new">New Folder</string>
    <string name="activity_hidden_apps">@string/menu_action_hidden_apps</string>
    <string name="activity_settings">@string/menu_action_ux_settings</string>
    <string name="activity_welcome_first">Welcome to HomeUX!</string>
    <string name="activity_welcome_second">\?</string>
    <string name="adapt_to_folder">Adapt to folder</string>
    <string name="adapt_to_folder_desc">Uses primary folder color</string>
    <string name="am_shown">Show AM/PM</string>
    <string name="am_shown_desc">(Only in 12h format)</string>
    <string name="app_choose_icon">Choose an icon for this app</string>
    <string name="app_deleted">Could not find the app. It might have been uninstalled</string>
    <string name="app_error_message">There was an error while getting the app to edit.</string>
    <string name="app_expired">App expired</string>
    <string name="app_expired_message">HomeUX Beta has reached its expiration date. Please check out the release version of HomeUX in the Play Store.</string>
    <string name="app_grid_h">App grid height</string>
    <string name="app_grid_size">Grid Size</string>
    <string name="app_grid_w">App grid width</string>
    <string name="app_icon_size">App icon size</string>
    <string name="app_icon_size_dialog_title">Set the icon size</string>
    <string name="app_info">Here are your apps organized in designated folders. You can navigate apps by swiping horizontally and folders by swiping vertically.</string>
    <string name="app_label_hint">App label</string>
    <string name="app_labels">Show app labels</string>
    <string name="app_misc">Miscellaneous</string>
    <string name="app_name">HomeUX</string>
    <string name="app_page_transition">App page transition</string>
    <string name="app_show_in_drawer">Show in app drawer</string>
    <string name="app_version">HomeUX version</string>
    <string name="app_version_code">Version code</string>
    <string name="app_version_code_url">https://play.google.com/store/apps/details?id=com.dravite.homeux</string>
    <string name="app_version_url">https://play.google.com/store/apps/details?id=com.dravite.homeux</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_error">Licensing failed due to an app fault.</string>
    <string name="backtofor">Go to back</string>
    <string name="backup_app_config_description">This includes default, themed and custom icons, as well as customized labels and hidden apps.</string>
    <string name="backup_app_config_title">App configurations</string>
    <string name="backup_deleted">Backups deleted</string>
    <string name="backup_folders_description">All your custom made folders.</string>
    <string name="backup_folders_title">Folders</string>
    <string name="backup_name_error">"You can't use an empty name"</string>
    <string name="backup_name_hint">Backup name</string>
    <string name="backup_nothing_checked_error">"I'm not capable of backing up nothing."</string>
    <string name="backup_saved">Backup saved to /sdcard/HomeUX-Backups/</string>
    <string name="backup_user_description">Everything you set up in HomeUX settings like app grid size, visuals or defaults.</string>
    <string name="backup_user_title">User Settings</string>
    <string name="backup_what">What to backup?</string>
    <string name="bold_clock">Bold clock</string>
    <string name="brightness">Brightness</string>
    <string name="calendar_error">"Couldn't start calendar :("</string>
    <string name="category_about">About</string>
    <string name="category_app">App</string>
    <string name="category_cards">Cards</string>
    <string name="category_clock_widget">Clock widget</string>
    <string name="category_defaults">Defaults</string>
    <string name="category_icons">Icons</string>
    <string name="category_pages">Pages</string>
    <string name="category_panel_customizations">Panel customizations</string>
    <string name="category_quick_actions">QuickApps</string>
    <string name="center_clock">Center clock</string>
    <string name="choose_accent">"Choose an accent color
(Action button)"</string>
    <string name="choose_folder_icon">Choose a folder icon</string>
    <string name="choose_number">Select a number</string>
    <string name="choose_primary">"Choose a top panel
background image"</string>
    <string name="choose_quick_action_icon">Choose an icon</string>
    <string name="clock_font">Clock font</string>
    <string name="clock_size">Clock size</string>
    <string name="color">Color</string>
    <string name="create_from_play_store">Create from Play Store</string>
    <string name="cubeout">Cube</string>
    <string name="cursive_clock">Italic clock</string>
    <string name="default_">Default</string>
    <string name="default_home">Default home folder</string>
    <string name="default_top_panel">Default top panel</string>
    <string name="depth">Depth</string>
    <string name="dialog_accent_color">Accent Color</string>
    <string name="dialog_apply_icon_pack_message">This may take a while…</string>
    <string name="dialog_apply_icon_pack_title">Applying icon pack</string>
    <string name="dialog_backup_message">Backing up your data…</string>
    <string name="dialog_backup_title">Backup</string>
    <string name="dialog_delete_backups">Do you really want to delete those backups?</string>
    <string name="dialog_delete_folder_message">Do you really want to delete this folder?</string>
    <string name="dialog_delete_folder_title">Delete folder</string>
    <string name="dialog_exit_saving_message">Do you really want to discard the current changes and go back?</string>
    <string name="dialog_exit_saving_title">Exit without saving</string>
    <string name="dialog_primary_color">Primary Color</string>
    <string name="dialog_remove_quick_action_icon_message">Do you really want to remove this QuickAction shortcut?</string>
    <string name="dialog_remove_quick_action_icon_title">Remove shortcut</string>
    <string name="dialog_restore">Restore</string>
    <string name="dialog_restore_message">Backing up your data…</string>
    <string name="dialog_restore_message_question">Do you really want to restore this backup?</string>
    <string name="dialog_restore_title">Backup</string>
    <string name="direct_reveal">Use direct reveal</string>
    <string name="direct_reveal_desc">Synchronize the background reveal with the folder scrolling</string>
    <string name="dis_wallpaper_scroll">Disable wallpaper scrolling</string>
    <string name="donate">Donate</string>
    <string name="donate_desc">Help us by ordering premium</string>
    <string name="donate_link">https://play.google.com/store/apps/details?id=com.home.ux.donate</string>
    <string name="enable_notification_badges">Enable notification badges</string>
    <string name="enable_start_animation">Enable start animation</string>
    <string name="enter_folder_name">Enter a folder name</string>
    <string name="error">Error</string>
    <string name="expires">Expires</string>
    <string name="extra_large">Extra large</string>
    <string name="extra_small">Extra small</string>
    <string name="fliph">Flip Horizontal</string>
    <string name="flipv">Flip Vertical</string>
    <string name="folder_all">All</string>
    <string name="folder_deleted">Folder deleted!</string>
    <string name="folder_dependent">Folder dependent</string>
    <string name="folder_name_already_taken_error">Cannot create a folder with a name that already exists.</string>
    <string name="folder_no_name_error">Cannot create a folder without a name.</string>
    <string name="folders_create">Please create your desired folders</string>
    <string name="fortoback">Go to front</string>
    <string name="fqa">This is your floating QuickApp currently set to launch search via a single tap. You can set it to launch any other application via a long-tap in the UX Settings.</string>
    <string name="fragment_welcome_folders">Folders</string>
    <string name="fragment_welcome_quick_access">QuickApps</string>
    <string name="hide_all_folder">Hide All folder</string>
    <string name="hide_apps_from_all">Hide apps from All folder</string>
    <string name="hide_cards">Show app background</string>
    <string name="icon_category_all">All</string>
    <string name="icon_category_google">Google</string>
    <string name="icon_category_system">System</string>
    <string name="icon_default">Default</string>
    <string name="icon_from_pack">From icon pack…</string>
    <string name="icon_original">Original</string>
    <string name="individual">Individual</string>
    <string name="large">Large</string>
    <string name="load_icons">Loading icons…</string>
    <string name="lock_alphabetical">Lock alphabetical sorting</string>
    <string name="medium">Medium</string>
    <string name="menu_action_backup_restore">Backup</string>
    <string name="menu_action_hidden_apps">Hidden Apps</string>
    <string name="menu_action_icon_pack">Icon pack</string>
    <string name="menu_action_system_settings">System</string>
    <string name="menu_action_ux_settings">UX Settings</string>
    <string name="menu_action_wallpaper">Wallpaper</string>
    <string name="saturation">Saturation</string>
    <string name="save">Save</string>
    <string name="select_icon">Select icon</string>
</resources>