<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/quick_settings_bg" android:background="#65000000" android:paddingTop="25.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="2.0dip">
        <com.vanbo.homeux.dravite.newlayouttest.views.QuickSettingsButton android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@id/bt_wallpaper" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/menu_action_wallpaper" android:drawableTop="@drawable/ic_wallpaper_black_24dp" android:layout_weight="1.0" android:elevation="4.0dip" />
        <com.vanbo.homeux.dravite.newlayouttest.views.QuickSettingsButton android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@id/bt_icon_pack" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/menu_action_icon_pack" android:drawableTop="@drawable/ic_apps_black_24dp" android:layout_weight="1.0" android:elevation="4.0dip" />
        <com.vanbo.homeux.dravite.newlayouttest.views.QuickSettingsButton android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@id/bt_settings" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/menu_action_ux_settings" android:drawableTop="@drawable/ic_settings_black_24dp" android:layout_weight="1.0" android:elevation="4.0dip" />
    </LinearLayout>
</LinearLayout>
