<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:theme="@android:style/Theme.Material.Light" android:id="@id/colorLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/hexValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="Hex value" android:singleLine="true" android:layout_alignParentBottom="true" android:imeOptions="actionDone" android:layout_toStartOf="@id/submitButton" android:layout_alignStart="@id/value" />
    <SeekBar android:id="@id/value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="-8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="16.0dip" android:max="1000" android:layout_above="@id/hexValue" android:layout_alignParentBottom="false" />
    <TextView android:id="@id/valueLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/brightness" android:layout_above="@id/value" android:layout_alignParentTop="false" />
    <SeekBar android:id="@id/saturation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="-8.0dip" android:layout_marginRight="8.0dip" android:max="1000" android:layout_above="@id/valueLabel" android:layout_alignParentStart="true" />
    <TextView android:id="@id/saturationLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/saturation" android:layout_above="@id/saturation" android:layout_alignParentStart="true" />
    <SeekBar android:id="@id/hue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="-8.0dip" android:layout_marginRight="8.0dip" android:max="360" android:layout_above="@id/saturationLabel" android:layout_alignParentStart="true" />
    <TextView android:id="@id/colorLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/color" android:layout_above="@id/hue" android:layout_alignParentStart="true" />
    <android.support.v7.widget.RecyclerView android:id="@id/presets" android:layout_width="48.0dip" android:layout_height="fill_parent" android:layout_above="@id/colorLabel" android:layout_alignParentRight="true" />
    <View android:id="@id/colorView" android:background="#ff93949f" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/presets" android:layout_above="@id/colorLabel" />
    <Button android:id="@id/switchTo" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Switch to accent" android:layout_alignTop="@id/colorView" android:layout_alignParentTop="false" android:layout_toStartOf="@id/presets" android:layout_alignParentStart="false" />
    <ImageButton android:id="@id/submitButton" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_okay" android:tint="@android:color/white" android:layout_below="@id/value" android:layout_alignEnd="@id/valueLabel" />
</RelativeLayout>
